fix horizontal scrollbar and details block

--- a/www/src/styles/global.css
+++ b/www/src/styles/global.css
@@ -171,12 +171,12 @@
   }
 
   .markdown details {
-    @apply mt-2 w-full rounded-md bg-t3-purple-200/50 px-3 pb-0.5 ring 
-          ring-t3-purple-200 transition-all duration-75 ease-in-out
-          dark:bg-slate-700 dark:ring-slate-500;
+    @apply mt-2 w-full rounded-md  bg-[#292D3E] px-3 
+          transition-all duration-75
+          ease-in-out;
   }
   .markdown details > summary {
-    @apply cursor-pointer text-t3-purple-700 dark:text-slate-300;
+    @apply cursor-pointer text-[#A6ACCD];
   }
   .markdown details[open] > summary {
     @apply border-b-2 border-t3-purple-200 dark:border-slate-500;
